# FILINGLENS

./: .gitignore  LOG.md  PLAN.md  README.md  pyproject.toml
eval/: golden_qa.jsonl
src/filinglens/: __init__.py  answer.py  api.py  chunk.py  cli.py  config.py  embed.py  eval.py  ingest.py  parse.py  retrieve.py
tests/: test_answer.py  test_api.py  test_config.py  test_embed.py  test_eval.py  test_ingest.py  test_parse_chunk.py  test_rag_e2e.py
