[project]
name = "filinglens"
version = "0.1.0"
description = "SEC filing Q&A with verifiable citations"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "sentence-transformers",
    "chromadb",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]  # httpx: required by FastAPI's TestClient

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
